Removed _site folder

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: .
 website:
   title: "Zoe Fairlie"
   page-footer: "© 2025 Zoe Fairlie"
@@ -18,6 +19,8 @@ website:
         contents:
           - href: Website.qmd
             text: "Senior Honors Thesis"
+          - href: birdproject.qmd
+            text: "SPUR Grant Research Project"
       - href: Pictures.qmd
         text: "Pictures"
 
